--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
         <div class="dashboard">
                 <div class="about_me">
-                    <img class="main_image" src="/이지수.png">
+                    <img class="main_image" src="./이지수.png">
                     <h1 class="korean-comment">안녕하세요 제 이름은 <a class="sample"> 이지수 입니다.</a> <br> 
                         <a class="highlight type1"> 주어진 문제</a>를 <a class="highlight type2">제대로 </a>
                         해결하는 <a class="highlight type3">머신러닝 엔지니어</a><br> 를 꿈꿉니다.</h1>
