--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="navigator">
             <h3 class="site-name">Leejisss</h3>
             <ul>
-                <li><a href="index.html" class="nav-menu">EXPERIMENT</a></li>
+                <li><a href="index.html" class="nav-menu">PROJECT</a></li>
                 <li><a href="publication.html" class="nav-menu">PUBLICATION</a></li>
             </ul>
         </nav>
@@ -101,6 +101,39 @@
                             <p id="text_id">ICCT2020</p>
                         </div>
                         
+                    </div>
+                    <h2>EXPERIMENT</h2>
+                    <div class="main_experiment">
+                        <div class="year">
+                            <h2>연도</h2>
+                            <p id="text_id2">2021. 05 ~ 11</p>
+                            <p id="text_id2">2020. 05 ~ 12</p>
+                            <p id="text_id2">2019. 12</p>
+                        </div>
+                        <div class="program">
+                            <h2>대회명</h2>
+                            <p id="text_id2">2021 학생창업유망팀300</p>
+                            <p id="text_id2">2020 학생창업유망팀300</p>
+                            <p id="text_id2">가장 보통의 창업</p>
+                        </div>
+                        <div class="item_name">
+                            <h2>아이템명</h2>
+                            <p id="text_id2">AI기반 홈 웨이트 트레이닝 보조 시스템</p>
+                            <p id="text_id2">재난 현장에서 효과적인 환자분류 및 이송을 위한 스마트 팔찌</p>
+                            <p id="text_id2">반려동물 접근방지 스티커</p>
+                        </div>
+                        <div class="publisher">
+                            <h2>주관 기관</h2>
+                            <p id="text_id2">한국청년기업가정신재단</p>
+                            <p id="text_id2">한국청년기업가정신재단</p>
+                            <p id="text_id2">동서대학교 창업지원단</p>
+                        </div>
+                        <div class="etc">
+                            <h2>비고</h2>
+                            <p id="text_id2">본선 선발(팀장)</p>
+                            <p id="text_id2">전체 22위 데모데이 진출(팀원)</p>
+                            <p id="text_id2">대상(아이디어 경진대회)</p>
+                        </div>
                     </div>
                 </div>
         </div>
