--- a/publication.html
+++ b/publication.html
@@ -15,7 +15,7 @@
             <h3 class="site-name">Leejisss</h3>
             <ul>
                 <li><a href="index.html" class="nav-menu">MAIN</a></li>
-                <li><a href="publication.html" class="nav-menu">EXPERIMENT</a></li>
+                <li><a href="publication.html" class="nav-menu">PROJECT</a></li>
             </ul>
         </nav>
         <div class="publication_section">
