--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@
         <nav class="navigator">
             <h3 class="site-name">Leejisss</h3>
             <ul>
-                <li><a href="index.html" class="nav-menu">PROJECT</a></li>
                 <li><a href="publication.html" class="nav-menu">PUBLICATION</a></li>
             </ul>
         </nav>
         <div class="dashboard">
                 <div class="about_me">
                     <img class="main_image" src="./이지수.png">
-                    <h1 class="korean-comment">안녕하세요 제 이름은 <a class="sample"> 이지수 입니다.</a> <br> 
-                        <a class="highlight type1"> 주어진 문제</a>를 <a class="highlight type2">제대로 </a>
-                        해결하는 <a class="highlight type3">머신러닝 엔지니어</a><br> 를 꿈꿉니다.</h1>
+                    <h1 class="korean-comment">안녕하세요 제 이름은 이지수 입니다. <br> 
+                        주어진 문제를 제대로 해결하는 머신러닝 엔지니어를 <br>꿈꿉니다.</h1>
                 </div>
                 <div class="profile-section">
                     <div class="introduction">
@@ -32,10 +30,13 @@
                             2022.02 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;동서대학교 컴퓨터공학과 공학석사</p>
         
                         <h2>ABOUT ME</h2>
-                        <p>동서대학교 컴퓨터공학과 석사과정을 졸업했습니다.<br>
-                            주 연구분야로 생체신호 데이터를 이용한 자세 판단 다중 분류를 수행하였습니다.<br></p>
-                            <h2>CAPABILITY</h2>
-                            <p id="capability">Python<br>Matlab<br>Tensorflow<br>Keras</p>
+                        <p>동서대학교 컴퓨터공학과 석사과정을 졸업하였으며, 주 연구분야로 생체신호 데이터를 이용한 
+                            자세 판단 다중 분류를 수행하였습니다.<br> 저의 강점은 데이터 수집부터 전처리 및 데이터 세트 구축, 
+                            Python과 Keras를 이용한 시계열 데이터, 이미지 분류 등
+                            프로젝트 설계부터 AI모델 개발까지 전반적인 과정을 수행한 경험이 있고<br>
+                            소프트웨어 개발 중 문제가 발생했을 때 관련 자료 및 논문을 읽고 다양한 방법을 시도함으로써 주어진 문제를 해결하는 것입니다.</p>
+                        <h2>CAPABILITY</h2>
+                        <p id="capability">Python<br>Matlab<br>Tensorflow<br>Keras</p>
                     </div>
                 </div>
 
