--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <p id="text_id">PTT기반 운동 강도 모니터링 시스템 구현</p>
                         </div>
                         <div class="publisher">
-                            <h2>학회</h2>
+                            <h2>출판사</h2>
                             <p id="text_id">Journal of Computational and Theoretical Nanoscience(JCTN)</p>
                             <p id="text_id">Journal of Computational and Theoretical Nanoscience(JCTN)</p>
                             <p id="text_id">Springer<br>&nbsp</p>
